# const_panic

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
const_panic_proc_macros/: Cargo.toml
const_panic_proc_macros/src/: datastructure.rs  derive_debug.rs  lib.rs  syntax.rs  test_utils.rs  utils.rs
const_panic_proc_macros/src/derive_debug/: attribute_parsing.rs  tests.rs
src/: array_string.rs  concat_panic_.rs  const_default.rs  doc_macros.rs  fmt.rs  lib.rs  macros.rs  non_basic_utils.rs  panic_arg.rs  panic_fmt.rs  panic_val.rs  slice_stuff.rs  str_utils.rs  test_utils.rs  utils.rs  wrapper.rs
src/fmt/: char_formatting.rs  fmt_compressed.rs  non_basic_fmt.rs
src/fmt/char_formatting/: tests.rs
src/fmt_impls/: basic_fmt_impls.rs  nonzero_impls.rs  option_fmt_impls.rs  other_impls.rs  rust_1_82_fmt_impls.rs
src/macros/: concat_assert.rs  concat_macro.rs  impl_panicfmt.rs  non_basic_macros.rs  unwrapping.rs
src/proc_macro_reexports/: panicfmt_derive.rs
src/utils/: non_basic_utils.rs  utils_tests.rs
tests/: derive_rename_crate.rs  main_test_modules.rs
tests/main_tests/: array_tests.rs  arraystring_tests.rs  assert_tests.rs  char_tests.rs  concat_macro_tests.rs  derive_tests.rs  impl_panicfmt_tests.rs  integer_tests.rs  misc_macros_tests.rs  option_fmt_tests.rs  other_fmt_tests.rs  panicval_macros_tests.rs  pvcount_tests.rs  rust_1_64_types_tests.rs  rust_1_82_types_tests.rs  rust_1_88_types_tests.rs  string_tests.rs  ui_tests.rs  utils_tests.rs
tests/main_tests/panicfmt_ui_tests/: concat_panic_not_panicfmt_arg-err.rs  concat_panic_not_panicfmt_arg-err.stderr  flatten_panicvals_mismatched_length-err.rs  flatten_panicvals_mismatched_length-err.stderr  flatten_panicvals_not_panicfmt_arg-err.rs  flatten_panicvals_not_panicfmt_arg-err.stderr  flatten_panicvals_uninferred_types-err.rs  flatten_panicvals_uninferred_types-err.stderr
