[package]
name = "const_panic"
version = "0.0.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
license = "Zlib"
description = "Basic const panic with Display-formatting, coming before Rust 1.57.0."
rust-version = "1.57"

[dependencies]

[dev-dependencies.konst]
version = "0.2.13"
default-features = false
features = ["parsing_no_proc"]


[features]
default = ["non_basic"]
non_basic = []
docsrs = []

# private feature
test = []
