[package]
name = "const_panic"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
license = "Zlib"
description = "const panic with formatting"
rust-version = "1.57"
readme="./README.md"
keywords = ["no-std", "format", "const", "panic"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/const_panic/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "LICENSE-ZLIB.md", 
]

[dependencies]

[features]
default = ["non_basic"]
non_basic = []
docsrs = []

# private feature
test = []

[package.metadata.docs.rs]
features = ["non_basic", "docsrs"]
