[package]
name = "const_panic"
version = "0.2.13"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
license = "Zlib"
description = "const panic with formatting"
rust-version = "1.57"
readme="./README.md"
keywords = ["no-std", "format", "const", "panic"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/const_panic/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "LICENSE-ZLIB.md", 
]

[workspace]

[dependencies.typewit]
version = "1.9.0"
optional = true

[dependencies.const_panic_proc_macros]
version = "=0.2.12"
path = "./const_panic_proc_macros/"
optional = true

[dev-dependencies.arrayvec]
version = "0.7"

[dev-dependencies.rand]
version = "0.8.4"
default_features = false
features = ["small_rng"]

[features]
default = ["non_basic"]

rust_1_64 = []
rust_1_82 = ["rust_1_64"]
rust_latest_stable = ["rust_1_82"]
non_basic = ["typewit"]
docsrs = []
derive = ["const_panic_proc_macros", "non_basic"]

# private feature
test = []

[package.metadata.docs.rs]
features = ["derive", "rust_latest_stable", "docsrs"]
